# canonical-lf

./: Extrinsic.hs  LICENSE  Main.hs  Ucps.hs  canonical-lf.cabal  stack.yaml
src/: Main.hs
src/Lang/: LF.hs
src/Lang/LF/: ChangeT.hs  DAG.hs  Model.hs  Tree.hs
src/Lang/LF/Internal/: Basics.hs  Build.hs  Hyps.hs  Model.hs  Print.hs  Solve.hs  Subst.hs  Typecheck.hs  View.hs  Weak.hs
toyml/: CPS.hs  Grammar.y  Lexer.x  Main.hs  Scope.hs  Simplify.hs  Terms.hs  ToyTC.hs  Ucps.hs
