name:            canonical-lf
version:         0.1
synopsis:        Implementation of canonical LF
license:         BSD3
license-file:    LICENSE
author:          Rob Dockins
maintainer:      robdockins AT fastmail DOT fm
copyright:       2015
build-type:      Simple
cabal-version:   >= 1.18

library
  hs-source-dirs: src
  exposed-modules:
    Lang.LF
  internal-modules:
    Lang.LF.Model
  build-depends:
    base >= 4.8 && < 5,
    containers,
    mtl,
    text
  default-language:
    Haskell2010
    