name:            canonical-lf
version:         0.1
synopsis:        Implementation of canonical LF
license:         BSD3
license-file:    LICENSE
author:          Rob Dockins
maintainer:      robdockins AT fastmail DOT fm
copyright:       2015
build-type:      Simple
cabal-version:   >= 1.18

library
  hs-source-dirs: src
  exposed-modules:
    Lang.LF
    Lang.LF.Tree
  other-modules:
    Lang.LF.ChangeT
    Lang.LF.Model
  build-depends:
    base >= 4.8 && < 5,
    ansi-wl-pprint,
    containers,
    mtl,
    text
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    GADTs
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    LambdaCase
    MultiParamTypeClasses
    PatternGuards
    PolyKinds
    ScopedTypeVariables
    TypeFamilies
    ViewPatterns
  ghc-options: -Werror -W

executable testlf
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >= 4.8 && < 5,
    ansi-wl-pprint,
    containers,
    mtl,
    text
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    GADTs
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    LambdaCase
    MultiParamTypeClasses
    PatternGuards
    PolyKinds
    ScopedTypeVariables
    TypeFamilies
    ViewPatterns
  ghc-options: -Werror -W
  